# motor_information_connectivity_trees

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
analyses/confounds/: roi_size.py
analyses/nonlinear/: surrogate_null.py
analyses/q1_healthy_conservation/: cl_vs_fc_sparse.py  consensus.py
analyses/q2_cast_disuse/: cast_disuse.py  cast_figures.py
analyses/topology/: anatomical.py  directness.py
atlases/: README.md
config/: atlases.yaml  datasets.yaml  roi_scheme.yaml
pipelines/: compute_connectivity.py  define_rois.py  extract_timeseries.py
plans_and_reports/methods/: fc_sparse_networks.md  ps1_bids_filter.json  ps1_bids_filter_batch.json  ps1_bids_filter_smoke.json  ps1_fmriprep_batch.sbatch  ps1_fmriprep_smoke.sbatch  ps1_preprocessing.md
plans_and_reports/plans/: direct_interpretable_topology.md  motor_system_plan.md  nonlinear_sensitivity_plan.md  repo_organization_plan.md
plans_and_reports/reports/: 2026-06-05_19roi_motor_network_report.md
results/MSC/surface/confounds/: roi_size.json  roi_size.txt
results/MSC/surface/nonlinear/: surrogate_null.json  surrogate_null.txt
results/MSC/surface/q1/: cl_vs_fc_sparse.json  cl_vs_fc_sparse.txt  conservation.json  summary.txt
src/mict/: __init__.py  chow_liu.py  cifti.py  conditional.py  connectivity.py  fc_sparse.py  io.py  mutual_info.py  paths.py  premotor.py  preprocessing.py  rois.py  stats.py  subcortex.py  surface.py  surrogates.py  wu.py
src/mict/viz/: __init__.py  brain.py  figures.py  trees.py
tests/: conftest.py  test_cl_tree.py  test_mi.py
(+92 files in other folders)
